Project1VS/force-app/main/default/objects/User/fields/Current_Character_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Character_Id__c</fullName>
    <label>Current Character Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>