Project1VS/force-app/main/default/objects/User/fields/User_Rating__c.field-meta.xml
<CustomField>
    <fullName>User_Rating__c</fullName>
    <label>User Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>