Project1VS/force-app/main/default/objects/User/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Player</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>